kubernetes/apps/ai/buzz/httproute-minio-console.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: networking
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "minio.jupitertech.net"
  rules:
    - backendRefs:
        - name: buzz-minio-console
          namespace: buzz
          port: 9090
